--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,48 @@
-name: Deploy to Dokploy
+name: Deploy to Dokploy (GHCR)
 
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
+env:
+  WEB_IMAGE: ghcr.io/${{ github.repository_owner }}/myapp-web:${{ github.sha }}
+  SERVER_IMAGE: ghcr.io/${{ github.repository_owner }}/myapp-server:${{ github.sha }}
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    env:
-      WEB_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/myapp-web:${{ github.sha }}
-      API_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/myapp-api:${{ github.sha }}
+    permissions:
+      contents: read
+      packages: write # Required to push to GHCR
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Set up pnpm
+        run: corepack enable pnpm
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build & Push Next.js App
+      # Build and push Next.js frontend
       - name: Build and push web (Next.js)
         uses: docker/build-push-action@v5
         with:
@@ -31,25 +50,29 @@ jobs:
           file: ./apps/web/Dockerfile
           push: true
           tags: ${{ env.WEB_IMAGE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # Build & Push Go Backend
-      - name: Build and push api (Go)
+      # Build and push Go backend
+      - name: Build and push server (Go)
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./apps/api/Dockerfile
+          file: ./apps/server/Dockerfile
           push: true
-          tags: ${{ env.API_IMAGE }}
+          tags: ${{ env.SERVER_IMAGE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # Trigger Dokploy Deployments via Webhooks
+      # Trigger Dokploy deployments
       - name: Deploy web to Dokploy
         run: |
           curl -X POST "${{ secrets.DOKPLOY_WEB_DEPLOY_URL }}" \
             -H "Content-Type: application/json" \
             -d '{"image": "${{ env.WEB_IMAGE }}"}'
 
-      - name: Deploy api to Dokploy
+      - name: Deploy server to Dokploy
         run: |
-          curl -X POST "${{ secrets.DOKPLOY_API_DEPLOY_URL }}" \
+          curl -X POST "${{ secrets.DOKPLOY_SERVER_DEPLOY_URL }}" \
             -H "Content-Type: application/json" \
-            -d '{"image": "${{ env.API_IMAGE }}"}'
+            -d '{"image": "${{ env.SERVER_IMAGE }}"}'
