--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
 node_modules
 .pnp
@@ -36,3 +34,7 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts*
