--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,14 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Set up pnpm
         run: corepack enable pnpm
 
       - name: Install dependencies
         run: pnpm install
-        with:
-          version: 9
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
