--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Debug secrets
         run: |
-          echo "API Key starts with: ${{ secrets.DOKPLOY_API_KEY }}"
+          echo "API Key starts with: ${{ secrets.DOKPLOY_URL }}"
           echo "Web App ID: ${{ secrets.DOKPLOY_WEB_APP_ID }}"
         env:
           DOKPLOY_API_KEY: ${{ secrets.DOKPLOY_API_KEY }}
