--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Debug secrets
-        run: |
-          echo "API Key starts with: ${{ secrets.DOKPLOY_URL }}"
-          echo "Web App ID: ${{ secrets.DOKPLOY_WEB_APP_ID }}"
-        env:
-          DOKPLOY_API_KEY: ${{ secrets.DOKPLOY_API_KEY }}
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -59,7 +52,9 @@ jobs:
           file: ./apps/web/Dockerfile
           push: true
           platforms: linux/amd64
-          tags: ${{ env.WEB_IMAGE }}
+          tags: |
+            ${{ env.WEB_IMAGE }}
+            ghcr.io/ismayelalam/myapp-web:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -70,7 +65,9 @@ jobs:
           context: .
           file: ./apps/server/Dockerfile
           push: true
-          tags: ${{ env.SERVER_IMAGE }}
+          tags: |
+            ${{ env.SERVER_IMAGE }}
+            ghcr.io/ismayelalam/myapp-server:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
