--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,7 @@ jobs:
           context: .
           file: ./apps/server/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.SERVER_IMAGE }}
             ghcr.io/ismayelalam/myapp-server:latest
