--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -29,13 +29,17 @@ WORKDIR /app
 RUN addgroup -g 1001 -S nodejs && \
     adduser -S nextjs -u 1001
 
-# Copy standalone output (requires `output: 'standalone'` in next.config.js/mjs)
-COPY --from=builder /app/.next/standalone/apps/web ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/apps/web/public ./public
+# copy standalone output
+COPY --from=base /app/apps/web/.next/standalone ./
+
+# copy required .next/static folder
+COPY --from=base /app/apps/web/.next/static ./.next/static
+
+# copy public folder
+COPY --from=base /app/apps/web/public ./public
 
 USER nextjs
 
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["node", "apps/web/server.js"]
