--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -25,18 +25,19 @@ RUN corepack enable pnpm
 
 WORKDIR /app
 
+ENV NODE_ENV=production
+
 # Create non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nextjs -u 1001
+RUN addgroup -g 1001 -S nodejs && adduser -S nextjs -u 1001
 
 # copy standalone output
-COPY --from=base /app/apps/web/.next/standalone ./
+COPY --from=base --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
 
 # copy required .next/static folder
-COPY --from=base /app/apps/web/.next/static ./.next/static
+COPY --from=base --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
 
 # copy public folder
-COPY --from=base /app/apps/web/public ./public
+COPY --from=base /app/apps/web/public ./apps/web/public
 
 USER nextjs
 
