--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -12,7 +12,7 @@ COPY apps/server/ .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o main ./cmd/api
 
 # Final minimal image
-FROM alpine:latest
+FROM builder
 
 RUN go install github.com/pressly/goose/v3/cmd/goose@latest
 
