--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -20,6 +20,10 @@ RUN pnpm build
 # --- Production stage ---
 FROM node:20-alpine AS runner
 
+# Set them as ENV so Next.js sees them during build
+ARG Backend_URL      
+ENV Backend_URL=$Backend_URL
+
 # Enable pnpm (optional, but good practice)
 RUN corepack enable pnpm
 
