--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,8 @@ jobs:
             ghcr.io/ismayelalam/myapp-web:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            Backend_URL=${{ vars.Backend_URL }}
 
       # Build and push Go backend
       - name: Build and push server (Go)
