--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ env:
   WEB_IMAGE: ghcr.io/${{ github.repository_owner }}/myapp-web:${{ github.sha }}
   SERVER_IMAGE: ghcr.io/${{ github.repository_owner }}/myapp-server:${{ github.sha }}
   BACKEND_URL: ${{ vars.BACKEND_URL }}
+  NEXT_PUBLIC_BACKEND_URL: ${{ vars.NEXT_PUBLIC_BACKEND_URL }}
+  NEXT_PUBLIC_TEST: ${{ vars.NEXT_PUBLIC_TEST }}
+  TEST: ${{ vars.TEST }}
 
 jobs:
   build-and-deploy:
@@ -60,7 +63,10 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            NEXT_PUBLIC_BACKEND_URL=${{ env.BACKEND_URL }}
+            BACKEND_URL=${{ env.BACKEND_URL }}
+            NEXT_PUBLIC_BACKEND_URL=${{ env.NEXT_PUBLIC_BACKEND_URL }}
+            TEST=${{ env.TEST }}
+            NEXT_PUBLIC_TEST=${{ env.NEXT_PUBLIC_BACKEND_URL }}
 
       # Build and push Go backend
       - name: Build and push server (Go)
