--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,9 +3,13 @@ FROM --platform=$BUILDPLATFORM node:24-alpine AS base
 # Set them as ENV so Next.js sees them during build
 ARG BACKEND_URL
 ARG NEXT_PUBLIC_BACKEND_URL
+ARG TEST
+ARG NEXT_PUBLIC_TEST
 
 ENV BACKEND_URL=${BACKEND_URL}
 ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
+ENV TEST=${TEST}
+ENV NEXT_PUBLIC_TEST=${NEXT_PUBLIC_TEST}
 ENV NODE_ENV=production
 
 
